# cpp-template

./: .gitignore  CMakeLists.txt
cmake/defaults/: debug.cmake  default.cmake  release.cmake
cmake/modules/: utils.cmake
source/app/: CMakeLists.txt
source/app/main/: CMakeLists.txt
source/app/main/src/: CMakeLists.txt  main.cpp
source/app/src/: CMakeLists.txt
source/lib/: CMakeLists.txt
source/lib/example/: CMakeLists.txt
source/lib/example/inc/example/: Example.h  IExample.h
source/lib/example/src/: CMakeLists.txt  Example.cpp
source/lib/example/test/: CMakeLists.txt  ExampleTest.cpp
source/lib/googletest/: CMakeLists.txt
